# CourseBuddy

./: .gitignore  pyproject.toml  readme.md
src/coursebuddy/: main.py  transcript.py  youtube.py
