[project]
name = "coursebuddy"
version = "0.1.0"
description = "Convert YouTube videos and playlists to markdown transcripts"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "youtube-transcript-api>=1.2.3",
    "yt-dlp>=2025.12.8",
]

[project.scripts]
coursebuddy = "coursebuddy.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coursebuddy"]
